--- a/CsgoTranslator/MainWindow.xaml
+++ b/CsgoTranslator/MainWindow.xaml
@@ -3,8 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="CSGO Translator" Height="484.025" Width="550" ResizeMode="NoResize">
+        Title="CSGO Translator" Height="484.025" Width="550" ResizeMode="NoResize"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="149*"/>
